--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
-[package]
-name = "bang"
-version = "0.1.0"
-edition = "2024"
-
-default-run = "bang"
-
-[dependencies]
+[workspace]
+resolver = "3"
+members = ["bang_rt", "bang_core", "demo"]
