--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["bang_rt", "bang_core", "demo"]
+members = ["bang_rt", "bang_core", "demo_impl", "demo_runner"]
