--- a/demo/demo_dist/Cargo.toml
+++ b/demo/demo_dist/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bang_rt_common = { path = "../bang_rt_common" }
-bang_rt_macos = { path = "../bang_rt_macos" }
+bang_rt_common = { path = "../../bang_rt_common" }
+bang_rt_macos = { path = "../../bang_rt_macos" }
 demo_impl = { path = "../demo_impl" }
