--- a/demo/demo_dist/Cargo.toml
+++ b/demo/demo_dist/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 bang_rt_common = { path = "../../bang_rt_common" }
-bang_rt_macos = { path = "../../bang_rt_macos" }
+bang_rt_macos = { path = "../../runtimes/bang_rt_macos" }
 demo_impl = { path = "../demo_impl" }
