--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ members = [
     "runtimes/bang_rt_tui",
     "bang_rt_common",
     "bang_core",
-    "demo/demo_impl",
-    "demo/demo_dist",
+    "demo/demo_main",
+    "demo/demo_static",
     "bang_rt_common/tests/test_normal_dylib",
     "bang_rt_common/tests/test_panic_dylib",
     "bang_rt_common/tests/test_symbol_missing_dylib",
