--- a/demo/demo_static/Cargo.toml
+++ b/demo/demo_static/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "demo_dist"
+name = "demo_static"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 bang_rt_common = { path = "../../bang_rt_common" }
 bang_rt_macos = { path = "../../runtimes/bang_rt_macos" }
-demo_impl = { path = "../demo_impl" }
+demo_main = { path = "../demo_main" }
